# Splitwriter

./: .gitignore  LICENSE  Pack-Portable.ps1  README.md  Run.bat  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  fonts.rs  main.rs
src/features/: open_file.ts
src/shared/: defaultPrefs.ts  presets.ts
src/types/: react-css-extensions.d.ts
src/windows/: MainUI.tsx  swon.ts
src/windows - 0.9beta1/: MainUI.tsx
src/windows - 0.9beta1/boards/: TextBoard.tsx
src/windows - 0.9beta1/overlay/: Preferences.tsx  Sidebar.tsx
src/windows - 0.9beta1/panes/: SplitPane.tsx
src/windows - 0.9beta1/runtime/: accent.ts  appActions.ts
src/windows - 0.9beta1/ui/: BoardHandle.tsx  EchoView.tsx  TitleBar.tsx  TopBar.tsx  WindowResizeEdges.tsx
src/windows - 0.9beta2/: Folder_tree.ini  MainUI.tsx  swon.ts
src/windows - 0.9beta2/boards/: ViewerBoard.tsx
src/windows - 0.9beta2/overlay/: Preferences.tsx
src/windows - 0.9beta2/panes/: LeafPane.tsx  SplitPane.tsx
src/windows - 0.9beta2/runtime/: appActions.ts  paste.ts
src/windows - 0.9beta2/ui/: EchoView.tsx  TextToolbar.tsx  TitleBar.tsx
src/windows - 0.9beta3/: MainUI.tsx  swon.ts
src/windows - 0.9beta3/boards/: EditBoard.tsx  TextBoard.tsx  ViewerBoard.tsx
src/windows - 0.9beta3/overlay/: Preferences.tsx  Sidebar.tsx
src/windows - 0.9beta3/panes/: LeafPane.tsx  SplitPane.tsx
src/windows - old/: MainUI - 복사본 (2).tsx  MainUI.tsx  swon - 복사본.ts  swon.ts
src/windows - old/ui/: TitleBar.tsx  (+1 more)
(+33 files in other folders)
