[package]
name = "splitwriter"
version = "0.9.3-beta.4"
description = "Minimal multi-window sample (Main_UI / Open_Image)"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.64"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-confirm", "shell-open", "path-all", "dialog-message", "window-all", "fs-all", "dialog-save", "dialog-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trash = "3"
fontdb = "0.13"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
